refactor: Test Classes - Reformatted code - Removed redundant code - Refactored